--- a/ColorGame.css
+++ b/ColorGame.css
@@ -124,8 +124,12 @@ border: black solid 1px;
 display: flex;
 justify-content: center;
 align-items: center;
-font-size: 2.7rem;
+font-size: 2.5rem;
 box-shadow:0px 0px 20px 0px rgb(0, 0, 0);
+}
+#github-link{
+    color: black;
+    margin-left: 1%;
 }
 @media only screen and (min-width: 320px) and (max-width: 600px) {
     html{
